--- a/java.ini
+++ b/java.ini
@@ -53,4 +53,4 @@ java.socketname = /var/run/.php-java-bridge_socket
 ;; the following options.
 
 ;java.hosts     = "127.0.0.1:8080"
-;java.servlet   = On
+;java.servlet   = User
