--- a/server/WEB-INF/cgi/php-cgi-i386-linux.ini
+++ b/server/WEB-INF/cgi/php-cgi-i386-linux.ini
@@ -17,7 +17,6 @@ html_errors = Off
 ;; The java extension. Only the log_level is meaningful in this
 ;; environment.
 
-;extension=php_java.dll
-extension=java.so
+extension=java-i386-linux.so
 [java]
 java.log_level=2
