--- a/server/configure.in
+++ b/server/configure.in
@@ -28,6 +28,7 @@ AC_ARG_ENABLE(servlet,  [  --enable-servlet[[=JAR]]	JAR must be j2ee.jar or serv
 AC_ARG_ENABLE(script,  [  --enable-script[[=JAR]]	If you use JDK < 1.6 JAR must be script-api.jar which contains the jsr223 script api], SCRIPT="$enableval", SCRIPT="yes")
 AC_ARG_ENABLE(faces,  [  --enable-faces[[=JAR]]	JAR must be jsf-api.jar which contains the java server faces api], FACES="$enableval", FACES="yes")
 
+if test "$PHP_JAVA" != "no" || test "$PHP_MONO" != "no"  ; then
 
 JAVA_FUNCTION_CHECKS
 PTHREADS_CHECK
@@ -45,6 +46,13 @@ AM_CPPFLAGS="${AM_CPPFLAGS} $JAVA_INCLUDES"
 JAVA_CHECK_JNI
 if test "$have_jni" = "no"; then 
    JNI_LIBS=""
+fi
+else
+JAVA_CHECK_JNI
+if test "$have_jni" = "no"; then 
+   echo "FATAL: Native compilation not supported on this system."
+   echo "Install a java SDK and run: ./configure --with-java=<JAVA_HOME>"
+   exit 3
 fi
 fi
 
@@ -143,3 +151,29 @@ AC_SUBST(JAVA_BRIDGE_FACES_JAR)
 AM_CONDITIONAL([COND_GCJ], [test "$PHP_MONO" != "no" || test "$PHP_JAVA" = "yes"])
 AC_OUTPUT(Makefile)
 
+echo "-----------------------------------------------------------------"
+echo "The PHP/Java Bridge backend will be compiled with:"
+if test "$PHP_JAVA" = "yes"; then
+echo "  JAVA: --with-java not specified."
+echo "  Will use GNU gcc, gcj to compile backend to native code."
+else if test "$PHP_MONO" != "no"; then
+echo "  MONO: $PHP_MONO"
+echo "  Will use GNU gcc, gcj and ikvmc to compile backend to CLR bytecode."
+else
+echo "  JAVA                   : $PHP_JAVA"
+echo "  LOCAL (secure) channel : $have_jni"
+echo ""
+echo "  The following additional jars will be created:"
+echo "  SERVLET                : $JAVA_BRIDGE_SERVLET_JAR"
+echo "  SCRIPT                 : $JAVA_BRIDGE_SCRIPT_JAR"
+echo "  JAVA SERVER FACES      : $JAVA_BRIDGE_FACES_JAR"
+fi
+fi
+echo "-----------------------------------------------------------------"
+echo ""
+
+else
+
+echo "install:" >Makefile
+
+fi
