--- a/java-standalone.ini
+++ b/java-standalone.ini
@@ -16,11 +16,9 @@ java.log_level  = 3
 ;java.java_home = /usr/java/jdk1.5.0
 ;java.java      = /usr/java/jdk1.5.0/bin/java
 
-;; If you don't have a servlet engine, double-click on JavaBridge.jar
-;; or use the php-java-bridge service script to start and stop the
-;; backend as a system service.  Please see the RedHat RPM download
-;; for an example how to start java as a system service.
+;; If you don't have a servlet engine, use the php-java-bridge service
+;; script to start and stop the backend as a system service.  Please
+;; see the RedHat RPM download for an example how to start java as a
+;; system service.
 
 java.socketname = /var/run/.php-java-bridge_socket
-
-
