--- a/java.ini
+++ b/java.ini
@@ -6,3 +6,28 @@
 ;; See also: java-standalone.ini
 
 extension = java.so
+
+;; If you have installed the java-servlet.ini or java-standalone.ini,
+;; leave this file alone, edit the servlet or standalone ini file.
+;; Otherwise uncomment the following java section and one of the
+;; following options:
+;[java]
+
+;; If you want to run the backend(s) on different machines, start the
+;; backend(s), for example with the command:
+;;
+;; java -jar JavaBridge.jar 
+;;
+;; (see java -jar JavaBridge.jar --help option) and set java.hosts,
+;; for example:
+
+;java.hosts = 127.0.0.1:9267 192.168.5.203:9267 127.0.0.1:9167 
+
+
+;; If you want to start the default JVM automatically when the HTTP
+;; server starts, disable java.hosts, java.servlet and
+;; java.socketname, set java.java_home=<VM_HOME> and
+;; java.java=<VM_EXE>, for example:
+
+;java.java_home = /usr/java/default
+;java.java      = /usr/java/default/bin/java
