--- a/server/configure.in
+++ b/server/configure.in
@@ -21,7 +21,7 @@ AM_PROG_GCJ
 AC_PROG_LIBTOOL
 AC_STDC_HEADERS
 
-AC_ARG_WITH(java,  [  --with-java[[=JAVA_HOME]]	Include java support], PHP_JAVA="$withval", PHP_JAVA="yes")
+AC_ARG_WITH(java,  [  --with-java[[=JAVA_HOME,JRE_HOME]]	Include java support], PHP_JAVA="$withval", PHP_JAVA="yes")
 AC_ARG_WITH(mono,  [  --with-mono[[=ikvmc.exe location]]             Include mono support], PHP_MONO="$withval", PHP_MONO="no")
 AC_ARG_WITH(extdir,  [  --with-extdir[[=DIR]]	Directory which contains the shared java extension], EXTENSION_DIR="$withval", EXTENSION_DIR="`php-config --extension-dir`")
 AC_ARG_ENABLE(servlet,  [  --enable-servlet[[=JAR]]	JAR must be j2ee.jar or servlet.jar which contains the servlet classes], SERVLET="$enableval", SERVLET="yes")
@@ -38,9 +38,18 @@ JAVA_CHECK_BROKEN_STDIO_BUFFERING
 JAVA_CHECK_ABSTRACT_NAMESPACE
 JAVA_CHECK_STRUCT_UCRED
 
+AC_MSG_CHECKING(libtool)
+libtool --version | fgrep "(GNU libtool)" ||
+   AC_MSG_ERROR([Need GNU libtool, please read the INSTALL document.])
+
 JNI_LIBS="libnatcJavaBridge.la"
 AM_CPPFLAGS="${AM_CPPFLAGS} -DEXTENSION_DIR=\"\\\"\$(EXTENSION_DIR)\\\"\""
 if test "$PHP_JAVA" != "yes"; then
+# --with-java=/opt/compiletime/jdk,/usr/runtime/jre
+PHP_JAVA="`echo $PHP_JAVA | LANG=C awk -F, '{print $1}'`"
+PHP_JRE="`echo $PHP_JAVA | LANG=C awk -F, '{print $2}'`"
+if test X$PHP_JRE = X; then PHP_JRE="$PHP_JAVA"; fi
+
 JAVA_INCLUDES=`for i in \`find $PHP_JAVA/include -follow -type d -print\`; do echo -n "-I$i "; done`
 AM_CPPFLAGS="${AM_CPPFLAGS} $JAVA_INCLUDES"
 JAVA_CHECK_JNI
@@ -160,7 +169,8 @@ else if test "$PHP_MONO" != "no"; then
 echo "  MONO: $PHP_MONO"
 echo "  Will use GNU gcc, gcj and ikvmc to compile backend to CLR bytecode."
 else
-echo "  JAVA                   : $PHP_JAVA"
+echo "  JAVA (compile time)    : $PHP_JAVA"
+echo "  JAVA (run time)        : $PHP_JRE"
 echo "  LOCAL (secure) channel : $have_jni"
 echo ""
 echo "  The following additional jars will be created:"
