--- a/server/RunJavaBridge.c.in
+++ b/server/RunJavaBridge.c.in
@@ -12,17 +12,11 @@
    security context (see chcon(1)). */
 
 void usage(char*name){
-  fprintf(stderr, "Usage: %s [<socketname>] [<logLevel>] <logFile>\n", name);
-  fprintf(stderr, "Example 1: %s /var/run/.php-java-bridge_socket 1 /var/log/php-java-bridge.log\n", name);
-  fprintf(stderr, "Example 2: %s INET:9267 3 \"\" \n", name);
-  fprintf(stderr, "Example 3: %s node.log\n", name);
+  fprintf(stderr, "This file should not be called directly.\n");
+  fprintf(stderr, "Tag this file with the javabridge_exec_t security context and set it to\n");
+  fprintf(stderr, "suid/guid apache/apache. Example:\n");
+  fprintf(stderr, "chcon -t javabridge_exec_t %s; chown apache:apache %s; chmod 6111 %s\n", name, name, name);
   exit(1);
-}
-
-char *stringcat(char *s1, char *s2) {
-  char *s3=malloc(strlen(s1)+strlen(s2)+1);
-  *s3=0; strcat(s3,s1);
-  return strcat(s3,s2);
 }
 
 char *stringdup(char *s) {
@@ -30,40 +24,18 @@ char *stringdup(char *s) {
   return strdup(s);
 }
   
-#ifndef EXTENSION_DIR
-#error EXTENSION_DIR must point to the PHP extension directory
-#endif
-char *java="@PHP_JAVA@";
-
 int main(int argc, char**_argv){
   char **argv;
-  char *vm, *error;
+  char *error;
+  int i;
 
-  if(argc<4 && argc!=2) usage(_argv[0]);
+  if(argc<5) usage(_argv[0]);
 
-  if(strlen(java)==3&&!strcmp("yes",java))
-    vm = stringcat(EXTENSION_DIR, "/java");
-  else 
-    vm = stringcat(java, "/bin/java");
+  argv=calloc(argc, sizeof*argv);
+  for(i=0; i<argc-1; i++) 
+	argv[i]=stringdup(_argv[i+1]);
+  argv[i]=0;
 
-  if(argc==4 || argc==2) {
-    argv=calloc(9, sizeof*argv);
-    argv[0]=vm;
-    argv[1]=stringcat("-Djava.class.path=", EXTENSION_DIR/**/"/JavaBridge.jar");
-    argv[2]=stringcat("-Djava.library.path=", EXTENSION_DIR);
-    argv[3]=stringdup("-Djava.awt.headless=true");
-    argv[4]=stringdup("php.java.bridge.JavaBridge");
-    argv[5]=argc==2?stringdup("INET:0"):stringdup(_argv[1]); /* socketname */
-    argv[6]=argc==2?stringdup("2"):stringdup(_argv[2]); /* logLevel */
-    argv[7]=stringdup(_argv[argc==2?1:3]); /* logFile */
-    argv[8]=0;			/* last arg */
-  } else {
-    int i;
-    argv=calloc(argc, sizeof*argv);
-    for(i=0; i<argc-1; i++) 
-      argv[i]=stringdup(_argv[i+1]);
-    argv[i]=0;
-  }
   setreuid(geteuid(), -1);
   setregid(getegid(), -1);
   if(*argv[0]=='/') execv(argv[0], argv); else execvp(argv[0], argv);
