--- a/server/RunMonoBridge.c.in
+++ b/server/RunMonoBridge.c.in
@@ -12,9 +12,10 @@
    security context (see chcon(1)). */
 
 void usage(char*name){
-  fprintf(stderr, "Usage: %s [<socketname>] [<logLevel>] <logFile>\n", name);
-  fprintf(stderr, "Example 1: %s INET:9167 3 \"\" \n", name);
-  fprintf(stderr, "Example 2: %s node1.log\n", name);
+  fprintf(stderr, "This file should not be called directly.\n");
+  fprintf(stderr, "Tag this file with the javabridge_exec_t security context and set it to\n");
+  fprintf(stderr, "suid/guid apache/apache. Example:\n");
+  fprintf(stderr, "chcon -t javabridge_exec_t %s; chown apache:apache %s; chmod 6111 %s\n", name, name, name);
   exit(1);
 }
 
@@ -28,37 +29,18 @@ char *stringdup(char *s) {
   if(!s) return s;
   return strdup(s);
 }
-  
-#ifndef EXTENSION_DIR
-#error EXTENSION_DIR must point to the PHP extension directory
-#endif
-char *java="mono";
 
 int main(int argc, char**_argv){
   char **argv;
-  char *vm, *error;
-  if(argc<4 && argc!=2) usage(_argv[0]);
+  char *error;
+  int i;
+  if(argc<5) usage(_argv[0]);
 
-  if(strlen(java)==3&&!strcmp("yes",java))
-    vm = stringcat(EXTENSION_DIR, "/mono");
-  else 
-    vm = stringdup(java);
+  argv=calloc(argc, sizeof*argv);
+  for(i=0; i<argc-1; i++) 
+	argv[i]=stringdup(_argv[i+1]);
+  argv[i]=0;
 
-  if(argc==4 || argc==2) {
-    argv=calloc(6, sizeof*argv);
-    argv[0]=vm;
-    argv[1]=stringdup(EXTENSION_DIR/**/"/MonoBridge.exe");
-    argv[2]=argc==2?stringdup("INET:0"):stringdup(_argv[1]); /* socketname */
-    argv[3]=argc==2?stringdup("2"):stringdup(_argv[2]); /* logLevel */
-    argv[4]=stringdup(_argv[argc==2?1:3]); /* logFile */
-    argv[5]=0;			/* last arg */
-  } else {
-    int i;
-    argv=calloc(argc, sizeof*argv);
-    for(i=0; i<argc-1; i++) 
-      argv[i]=stringdup(_argv[i+1]);
-    argv[i]=0;
-  }
   setreuid(geteuid(), -1);
   setregid(getegid(), -1);
   if(*argv[0]=='/') execv(argv[0], argv); else execvp(argv[0], argv);
