--- a/java-servlet.ini
+++ b/java-servlet.ini
@@ -1,6 +1,6 @@
 ;; -*- mode: Scheme; tab-width:4 -*-
 
-;; java-servlet.ini: Activate the servlet backend
+;; java-servlet.ini: Activate the servlet back-end
 
 [java]
 
