--- a/java.ini
+++ b/java.ini
@@ -13,8 +13,8 @@ extension = java.so
 ;; following options:
 ;[java]
 
-;; If you want to run the backend(s) on different machines, start the
-;; backend(s), for example with the command:
+;; If you want to run the back-end(s) on different machines, start the
+;; back-end(s), for example with the command:
 ;;
 ;; java -jar JavaBridge.jar 
 ;;
