--- a/java-standalone.ini
+++ b/java-standalone.ini
@@ -1,6 +1,6 @@
 ;; -*- mode: Scheme; tab-width:4 -*-
 
-;; java-standalone.ini: Activate the standalone backend
+;; java-standalone.ini: Activate the standalone back-end
 
 [java]
 
@@ -17,7 +17,7 @@ java.log_level  = 3
 ;java.java      = /usr/java/jdk1.5.0/bin/java
 
 ;; If you don't have a servlet engine, use the php-java-bridge service
-;; script to start and stop the backend as a system service.  Please
+;; script to start and stop the back-end as a system service.  Please
 ;; see the RedHat RPM download for an example how to start java as a
 ;; system service.
 
