--- a/java-standalone.ini
+++ b/java-standalone.ini
@@ -9,6 +9,10 @@
 
 java.log_level  = 3
 
+;; If you want to use log4j "chainsaw" running on localhost, port 4445
+;; enable the following option
+;java.log_file = @127.0.0.1:4445
+
 
 ;; Adjust the following options if the VM or its location have
 ;; changed since you ran the ./configure command.
