--- a/java.ini
+++ b/java.ini
@@ -31,3 +31,13 @@ extension = java.so
 
 ;java.java_home = /usr/java/default
 ;java.java      = /usr/java/default/bin/java
+
+
+;; log level between 0 (log off) and 4 (log debug). The default "log
+;; file" is the standard error. The default level is 2.
+
+; java.log_level  = 3
+
+;; If you want to use log4j "chainsaw" running on localhost, port 4445
+;; enable the following option
+;java.log_file = @127.0.0.1:4445
