--- a/server/configure.in
+++ b/server/configure.in
@@ -27,9 +27,9 @@ AC_ARG_WITH(java,  [  --with-java[[=JAVA_HOME[[,JRE_HOME]]]]
                           the binary. Otherwise the java executable will 
                           be searched using the PATH environment variable
 			  Example: --with-java=/opt/jdk1.4,/usr/java/jre1.6], PHP_JAVA="$withval", PHP_JAVA="yes")
-AC_ARG_WITH(mono,  [  --with-mono[[=/path/to/ikvmc.exe]]
+AC_ARG_WITH(mono,  [  --with-mono[[=/path/to/mono.exe]]
                           include mono support
-                          Example: --with-mono=$HOME/ikvmdlls/], PHP_MONO="$withval", PHP_MONO="no")
+                          Example: --with-mono=/opt/mono/bin/mono], PHP_MONO="$withval", PHP_MONO="no")
 AC_ARG_WITH(extdir,  [  --with-extdir[[=DIR]]	
                           directory which contains the shared java 
                           extension], EXTENSION_DIR="$withval", EXTENSION_DIR="`php-config --extension-dir`")
@@ -54,8 +54,10 @@ JAVA_CHECK_ABSTRACT_NAMESPACE
 JAVA_CHECK_STRUCT_UCRED
 
 AC_MSG_CHECKING(libtool)
-libtool --version | fgrep "(GNU libtool)" ||
-   AC_MSG_ERROR([Need GNU libtool, please read the INSTALL document.])
+# On the Mac libtool is called "glibtool"
+glibtool --version 2>/dev/null | fgrep "(GNU libtool)" ||
+  libtool --version | fgrep "(GNU libtool)" ||
+  AC_MSG_ERROR([Need GNU libtool, please read the INSTALL document.])
 
 JNI_LIBS="libnatcJavaBridge.la"
 AM_CPPFLAGS="${AM_CPPFLAGS} -DEXTENSION_DIR=\"\\\"\$(EXTENSION_DIR)\\\"\""
