--- a/server/WEB-INF/cgi/php-cgi-i386-linux.ini
+++ b/server/WEB-INF/cgi/php-cgi-i386-linux.ini
@@ -5,6 +5,10 @@
 
 extension_dir=.
 
+;; include php libraries from these directories
+
+include_path=.:/usr/share/pear
+
 
 ;; Errors should appear in the log of the servlet engine, not in the
 ;; pages we generate. Users do not understand what they mean anyway.
@@ -19,18 +23,3 @@ html_errors = Off
 extension=java-i386-linux.so
 [java]
 ;java.log_level=2
-
-;; The following two settings are only used if override_hosts is
-;; switched off in the WEB-INF/web.xml. Add the following two entries
-;; marked with a + to your conf/server.xml, if you want to switch off
-;; override_hosts:
-;;
-;;   <Service name="Catalina">
-;;   [...]
-;; +   <!-- Local communication port used by the PHP/Java Bridge -->
-;; +   <Connector port="9157" address="127.0.0.1"  />
-;;   [...]
-;;   </Service>
-java.servlet = On
-java.hosts = 127.0.0.1:9157
-
