--- a/init_cfg.c.in
+++ b/init_cfg.c.in
@@ -122,6 +122,7 @@ static void override_ini_from_cgi(void) {
   char *hosts;
   EXT_GLOBAL(cfg)->is_cgi_servlet=0;
   EXT_GLOBAL(cfg)->is_fcgi_servlet=0;
+  EXT_GLOBAL(cfg)->is_secure=0;
   
   if ((hosts=getenv("X_JAVABRIDGE_OVERRIDE_HOSTS"))) {
 	switch(*hosts) {
@@ -141,13 +142,15 @@ static void override_ini_from_cgi(void) {
 	default:					/* cgi binary with redirect
 								   information */
 	  {
-		char *kontext, *host = strdup(hosts);
-		/* FIXME: unpleasantly low tech */
-		if(host[0]=='s') {
-		  php_error(E_ERROR, "php_mod_"/**/EXT_NAME()/**/"(%d): SSL tunnel not supported. Please use a dedicated HTTP port instead: Switch off the servlet init-param \"override_hosts\" in the WEB-INF/web.xml, set the php .ini entry java.hosts=127.0.0.1:9157 and add &lt;Connector port=\"9157\" address=\"127.0.0.1\"  /&gt to your tomcat conf/server.xml.", 29);
-		  exit(7);
+		char *kontext, *host, *val;
+		val = host = strdup(hosts);
+		if((host[0]=='s' || host[0]=='h') && host[1]==':') {
+		  if(*host=='s') 
+			EXT_GLOBAL(ini_user) |= U_SECURE;
+		  else 
+			EXT_GLOBAL(ini_user) &= ~U_SECURE;
+		  host+=2;
 		}
-		host+=2;
 		kontext = strchr(host, '/');
 		if(kontext) *kontext++=0;
 /* 		zend_alter_ini_entry((char*)key_hosts, sizeof key_hosts, */
@@ -170,7 +173,7 @@ static void override_ini_from_cgi(void) {
 /* 							   ZEND_INI_SYSTEM, PHP_INI_STAGE_STARTUP); */
 		  override_servlet(kontext);
 		}
-		free(host);
+		free(val);
 	  }
 	  /* fall through */
 	case 0:					/* cgi binary, but redirect is off */
